fixed last project cell fading

--- a/home.html
+++ b/home.html
@@ -155,66 +155,66 @@
 				<div id="projectBoxes1" class="row">
 					<div class="col-3 projectBoxes11">
 						<div class="container text-center text-bottom vertical-center">
-					      <h1 class="display-5 text-secondary text-uppercase">Auto Pilot</h1>
+					      <h1 class="display-5 text-dark text-uppercase">Auto Pilot</h1>
 					    </div>
 					</div>
 					<div class="col-3 projectBoxes12">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-5 text-secondary text-uppercase">Chat Line</h1>
+						  <h1 class="display-5 text-dark text-uppercase">Chat Line</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes13">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-5 text-secondary text-uppercase">Messenger SQL</h1>
+						  <h1 class="display-5 text-dark text-uppercase">Messenger SQL</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes14">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-5 text-secondary text-uppercase">Audit VBA Macro</h1>
+						  <h1 class="display-5 text-dark text-uppercase">Audit VBA Macro</h1>
 						</div>
 					</div>
 				</div>
 				<div id="projectBoxes2" class="row">
 					<div class="col-3 projectBoxes21">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes22">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes23">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes24">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 				</div>
 				<div id="projectBoxes3" class="row">
 					<div class="col-3 projectBoxes31">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes32">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes33">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 					<div class="col-3 projectBoxes34">
 						<div class="container text-center text-bottom vertical-center">
-						  <h1 class="display-3 text-secondary text-uppercase">Project X</h1>
+						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
 				</div>
