--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<script src="fadeSection.js"></script>
 		<title>Ricky Chen</title>
 	</head>
@@ -46,15 +47,19 @@
 				</div>
 			</nav>
 				<!-- Nav Bar End -->
-			<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
-				<div class="container text-center text-bottom fadeInEffect5">
-			      <h1 class="display-1 text-secondary text-uppercase fadeInEffect7">Ricky Chen</h1>
-			      <p class="display-4 text-white d-none d-sm-block fadeInEffect7">BS in Computer Science</p>
-			      <p class="lead text-white fadeInEffect7">San Francisco, California</p>
-			      <p class="lead text-white fadeInEffect7">Email: rickychen10@gmail.com</p>
-				  <p class="lead text-white fadeInEffect7">(415) 608-4948</p>
-			    </div>
-			</section>
+			<div class="parentParallax">
+				<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
+					<div class="container text-center text-bottom fadeInEffect5">
+					  <h1 class="display-1 text-secondary text-uppercase fadeInEffect7 paraText">Ricky Chen</h1>
+					  <p class="display-4 text-white d-none d-sm-block fadeInEffect7 paraText">BS in Computer Science</p>
+					  <p class="lead text-white fadeInEffect7 paraText">San Francisco, California</p>
+					  <p class="lead text-white fadeInEffect7 paraText">Email: rickychen10@gmail.com</p>
+					  <p class="lead text-white fadeInEffect7 paraText">(415) 608-4948</p>
+					</div>
+				</section>
+			</div>
+
+
 			<section id="sectionSkillBar" class="parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride">
 				<div class="row">
 					<div id="skilBar"  class="col-12">
@@ -66,19 +71,19 @@
 					<div id="percentBars" class="col-12">
 						<div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar" role="progressbar bg-warning" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div> <span class="text-secondary">50%</span>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div> <span class="text-secondary">50%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div> <span class="text-secondary">83%</span>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div> <span class="text-secondary">83%</span>
 							</div>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-info" role="progressbar" style="width: 68%;" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div> <span class="text-secondary">68%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div> <span class="text-secondary">42%</span>
+								<div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div> <span class="text-secondary">42%</span>
 							</div>
 						</div>
 					</div>
@@ -153,8 +158,9 @@
 					</div>
 				</div>
 				<div id="projectBoxes1" class="row">
-					<div class="col-3 projectBoxes11">
-						<div class="container text-center text-bottom vertical-center">
+
+					<!--<div class="col-3 projectBoxes11">
+						<div class="container text-center text-bottom vertical-center projectBoxes11Text">
 					      <h1 class="display-5 text-dark text-uppercase">Auto Pilot</h1>
 					    </div>
 					</div>
@@ -173,7 +179,162 @@
 						  <h1 class="display-5 text-dark text-uppercase">Audit VBA Macro</h1>
 						</div>
 					</div>
+
+				-->
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">AutoPilot - JS</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/K6k3Gzw.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Chatline - Java</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Messenger SQL - Java|SQL</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/zn9s9s7.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Audit Macros - VBA</h5>
+							</div>
+						</div>
+					</div>
+
+
 				</div>
+				<div id="projectBoxes1" class="row">
+
+					<!--<div class="col-3 projectBoxes11">
+						<div class="container text-center text-bottom vertical-center projectBoxes11Text">
+					      <h1 class="display-5 text-dark text-uppercase">Auto Pilot</h1>
+					    </div>
+					</div>
+					<div class="col-3 projectBoxes12">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Chat Line</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes13">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Messenger SQL</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes14">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Audit VBA Macro</h1>
+						</div>
+					</div>
+
+				-->
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card" style="width>:100%;">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+				<div id="projectBoxes1" class="row">
+
+					<!--<div class="col-3 projectBoxes11">
+						<div class="container text-center text-bottom vertical-center projectBoxes11Text">
+					      <h1 class="display-5 text-dark text-uppercase">Auto Pilot</h1>
+					    </div>
+					</div>
+					<div class="col-3 projectBoxes12">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Chat Line</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes13">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Messenger SQL</h1>
+						</div>
+					</div>
+					<div class="col-3 projectBoxes14">
+						<div class="container text-center text-bottom vertical-center">
+						  <h1 class="display-5 text-dark text-uppercase">Audit VBA Macro</h1>
+						</div>
+					</div>
+
+				-->
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card" style="width>:100%;">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="card">
+							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+				<!--
 				<div id="projectBoxes2" class="row">
 					<div class="col-3 projectBoxes21">
 						<div class="container text-center text-bottom vertical-center">
@@ -217,11 +378,25 @@
 						  <h1 class="display-3 text-dark text-uppercase">Project X</h1>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</section>
 			</div>
 			<footer id="1234" class="bg-light">
-				<div class="container py-3 py-sm-5">
+				<div class="row footStyle justify-content-center align-items-center">
+					<div class="col-6 text-center">
+					  <ul class="list-inline">
+						<li class="list-inline-item">&copy; 2017 Ricky Chen</li>
+						<li class="list-inline-item">All rights reserved.</li>
+						<li class="list-inline-item">Terms of use and privacy policy</li>
+					  </ul>
+					</div>
+					<div class="col-6">
+						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
+						<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
+						<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f text-secondary float-right contactIcon"></i></a>
+					</div>
+				</div>
+	<!--			<div class="container py-3 py-sm-5 footStyle">
 					<div class="row">
 						<div class="col-3 col-sm-6 col-lg-3">
 							<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f text-secondary float-right contactIcon"></i></a>
@@ -242,7 +417,7 @@
 			            </ul>
 			          </div>
 				  </div>
-				</div>
+			  </div>-->
 			</footer>
 			<!-- Class Taken Modal -->
 		<!--	<script>
