added new section 2 bg pic

--- a/home.html
+++ b/home.html
@@ -64,8 +64,8 @@
 				<div class="row">
 					<div id="skilBar"  class="col-12">
 						<div class="container text-center text-bottom">
-					      <h1 class="display-5 text-secondary text-uppercase">Professional:</h1>
-					      <p class="display-6 text-secondary d-none d-sm-block">My Skill Level Breakdown</p>
+					      <h1 class="display-3 text-secondary text-uppercase paraText">Professional:</h1>
+					      <p class="display-5 text-secondary d-none d-sm-block paraText">My Skill Level Breakdown</p>
 					    </div>
 					</div>
 					<div id="percentBars" class="col-12">
