fixed fonts of modals

--- a/home.html
+++ b/home.html
@@ -5,14 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="home.css" />
-		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<script src="fadeSection.js"></script>
-
 		<title>Ricky Chen</title>
 	</head>
 	<body>
@@ -102,60 +98,109 @@
 							<div class="modal-box">
 								<div class="modal-header">
 									<h1>Classes Taken</h1>
+									<h4>
+										UC Riverside 2015<br />
+	  							  		Bachelor of Science in Computer Science <br />
+									</h4>
 								</div>
 								<div class="modal-body">
 									<ul class="list-group">
-										<li class="list-group-item"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Share on Instagram</li>
-										<li class="list-group-item"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
-										<li class="list-group-item"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Discrete Structures (CS 111)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Logic Design (CS 120A)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i>Introduction to Embedded Systems (CS 120B)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Computer Graphics (CS 130)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Intermediate Data Structures and Algorithms (CS 141)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Automata and Formal Languages (CS 150)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Computer Security (CS 165)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Mobile Wireless (CS 169)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Share on Instagram</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
 								    </ul>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
 						</div>
 						  <h3 class="h4 mb-4 text-center">Education</h3>
-						  <p class="text-center">
-							  UC Riverside 2015<br />
-							  Bachelor of Science in Computer Science <br />
-						  </p>
 					</div>
 					<div id="awardsBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
-						<div class="h1"><i class="fa fa-award text-secondary mb-4" aria-hidden="true"></i></div>
+						<a href="#" class="modalBtn" data-modal="awardModalName">
+							<div class="h1"><i class="fa fa-award text-secondary mb-4" aria-hidden="true"></i></div>
+						</a>
 						<h3 class="h4 mb-4 text-center">Awards</h3>
-						<p class="text-center">
-						Hearst Autos 2018 First Mover Award - Stellar Performance
-						</p>
-						<div class="row">
-							<div id="project1Modal" class="modal">
-								<div class="modal-content">
-									<span class="close">&times;</span>
+						<div class="modal" id="awardModalName">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Awards</h1>
+								</div>
+								<div class="modal-body">
+									<ul class="list-group">
+										<li class="list-group-item paraText"><i aria-hidden="true"></i> Hearst Autos 2018 First Mover Award - Stellar Performance</li>
+								    </ul>
+									<button class="close-modal">Close!</button>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div id="clubsBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
-					  <div class="h1"><i class="fa fa-sitemap text-secondary mb-4" aria-hidden="true"></i></div>
-					  <h3 class="h4 mb-4 text-center">Clubs</h3>
-					  <p>
-						  <p class="text-center">Association for Computing Machinery</p>
-						  <p class="text-center">Pi Kappa Alpha Fraternity</p>
-						  <span id="sectionProjectSlide"></span>
-					  </p>
-						<div class="row">
-							<div id="project1Modal" class="modal">
-								<div class="modal-content">
-									<span class="close">&times;</span>
+					<div id="experienceBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
+						<a href="#" class="modalBtn" data-modal="expModalName">
+							<div class="h1"><i class="fa fa-briefcase text-secondary mb-4" aria-hidden="true"></i></div>
+						</a>
+
+						<h3 class="h4 mb-4 text-center">Experience</h3>
+						<div class="modal" id="expModalName">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Work Experience</h1>
+								</div>
+								<div class="modal-body">
+									<ul class="list-group">
+										<li class="list-group-item"><i aria-hidden="true"></i>
+											<h3>CKE Restaurants Holdings INC</h3>
+											<h5>IT Security Intern</h5>
+											<h6 class="dateRange">Jul. 2014 - Sep. 2014</h6>
+											<p>
+												<ul class="list-group">
+													<li class="list-group-item paraText">
+														Worked closely with IT Security/Change Management Analysts and Director of IT Security/Risk & Compliance on vulnerability network scans and day to day task
+													</li>
+													<li class="list-group-item paraText">
+														Utilized Lastline, a perimeter security monitor software, to review, analyze and respond to data breaches
+													</li>
+													<li class="list-group-item paraText">
+														Performed penetration testing with Kali Linux on Corporate Network and recorded findings with Offensive Security Report structure on a weekly basis
+													</li>
+													<li class="list-group-item paraText">
+														Applications/Programs used but not limited to: Cobalt Strike/Armitage, Lastline, Wireshark, Nmap, S.E.T. and Ettercap
+													</li>
+												</ul>
+											</p>
+										</li>
+										<li class="list-group-item"><i aria-hidden="true"></i>
+											<h3>Jumpstart - Subsidiary of Hearst Magazines</h3>
+											<h5>Technical Specialist</h5>
+											<h6 class="dateRange">Jun. 2015 - Present</h6>
+											<p>
+												<ul class="list-group">
+													<li class="list-group-item paraText">
+														Handle day-to-day tickets to help fix/prevent problems that arise such as broken HTML5 ads, custom products, or any publisher related issues.
+													</li>
+													<li class="list-group-item paraText">
+														Deployed scripts through Ensighten to our publisher network. These scripts range from analytics to custom products that we sell.
+													</li>
+													<li class="list-group-item paraText">
+														Proposed a project that will help automate the manual portion of my role which lead to the creation of Autopilot. This help dramatically cut down work time and human errors on the QA process.
+													</li>
+												</ul>
+											</p>
+										</li>
+								    </ul>
+									<button class="close-modal">Close!</button>
 								</div>
 							</div>
 						</div>
