--- a/home.html
+++ b/home.html
@@ -227,11 +227,11 @@
 
 								</div>
 								<div class="modal-body">
-									<div id="carouselProjectIndicators" class="carousel slide">
+									<div id="carouselAutoPilotIndicators" class="carousel slide">
 										<ol class="carousel-indicators">
-											<li data-target="#carouselProjectIndicators" data-slide-to="0" class="active"></li>
-											<li data-target="#carouselProjectIndicators" data-slide-to="1"></li>
-											<li data-target="#carouselProjectIndicators" data-slide-to="2"></li>
+											<li data-target="#carouselAutoPilotIndicators" data-slide-to="0" class="active"></li>
+											<li data-target="#carouselAutoPilotIndicators" data-slide-to="1"></li>
+											<li data-target="#carouselAutoPilotIndicators" data-slide-to="2"></li>
 										</ol>
 										<div class="carousel-inner">
 											<div class="carousel-item active">
@@ -253,11 +253,11 @@
 												<img class="d-block" src="https://media.giphy.com/media/3eP5pCglzacolFG1RA/giphy.gif" alt="Third slide">
 											</div>
 										</div>
-										<a class="carousel-control-prev" href="#carouselProjectIndicators" role="button" data-slide="prev">
+										<a class="carousel-control-prev" href="#carouselAutoPilotIndicators" role="button" data-slide="prev">
 											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 											<span class="sr-only">Previous</span>
 										</a>
-										<a class="carousel-control-next" href="#carouselProjectIndicators" role="button" data-slide="next">
+										<a class="carousel-control-next" href="#carouselAutoPilotIndicators" role="button" data-slide="next">
 											<span class="carousel-control-next-icon" aria-hidden="true"></span>
 											<span class="sr-only">Next</span>
 										</a>
@@ -281,8 +281,39 @@
 							<div class="modal-box">
 								<div class="modal-header">
 									<h1>Chatline</h1>
+									<h4>Java</h4>
 								</div>
 								<div class="modal-body">
+									<div id="carouselChatIndicators" class="carousel slide">
+										<ol id="carouselIndicatorChat" class="carousel-indicators">
+											<li data-target="#carouselChatIndicators" data-slide-to="0" class="active"></li>
+											<li data-target="#carouselChatIndicators" data-slide-to="1"></li>
+										</ol>
+										<div class="carousel-inner">
+											<div class="carousel-item active">
+												<p class="paraText">
+													This project was built using the Parse backend. It has the simple features of login authentication. <br />
+													*Source: The GIF were created off videos found off documentation.
+												</p>
+												<img class="d-block" src="https://media.giphy.com/media/yxrLDfasPUGKhDkfKx/giphy.gif" alt="First slide">
+											</div>
+											<div class="carousel-item">
+												<p class="paraText">
+													The main feature of this application was a chatting feature that allows user to talk to different users they have added to their friend list. <br />
+													*Source: The GIF was created off videos found off documentation.
+												</p>
+												<img class="d-block" src="https://media.giphy.com/media/x4bXdlMv4zg0aqa5fm/giphy.gif" alt="Second slide">
+											</div>
+										</div>
+										<a class="carousel-control-prev" href="#carouselChatIndicators" role="button" data-slide="prev">
+											<span id="carouselControlChatPrev" class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselChatIndicators" role="button" data-slide="next">
+											<span id="carouselControlChatNext" class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Next</span>
+										</a>
+									</div>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
