fix Copyright alignment

--- a/home.html
+++ b/home.html
@@ -438,7 +438,7 @@
 			</div>
 			<footer id="1234" class="bg-light">
 				<div class="row footStyle justify-content-center align-items-center">
-					<div class="col-6 text-center">
+					<div class="col-6">
 					  <ul class="list-inline">
 						<li class="list-inline-item">&copy; 2017 Ricky Chen</li>
 						<li class="list-inline-item">All rights reserved.</li>
