added project and github links

--- a/home.html
+++ b/home.html
@@ -262,6 +262,8 @@
 											<span class="sr-only">Next</span>
 										</a>
 									</div>
+
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/QA-Tool">Github Link</a><br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -332,9 +334,13 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Chatline</h1>
+									<h1>Messenger SQL - Java|SQL</h1>
 								</div>
 								<div class="modal-body">
+									<p>
+										The database that stores the messenges were built with Java and the queries were coded in SQL.<br />
+										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/messengerSQL">Github Link</a>
+									</p>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -353,9 +359,29 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Chatline</h1>
+									<h1>Audit Macros</h1>
+									<h4>VBA</h4>
 								</div>
 								<div class="modal-body">
+									<p>
+										This macro generates a monthly audit.
+										It dynamically scans the directory for the amount of zip files so that even when the amount changes, there is no need to modify the macro.<br />
+										<a class="paraTextGH" target="_blank" href="https://gist.github.com/rchen016/03624205a8cc1d3026745909ffb24ee0">Github Link</a>
+									</p>
+									<ol class="list-group">
+										<li class="list-group-item paraText">
+											Unzips all the raw data files from Box.
+										</li>
+										<li class="list-group-item paraText">
+											Copys and paste all the necessary columns from the raw data into an audit reporting Excel template.
+										</li>
+										<li class="list-group-item paraText">
+											Goes to the formulas tab in the audit reporting Excel template and runs all the needed comparisons.
+										</li>
+										<li class="list-group-item paraText">
+											Remove all raw data tabs so that the final report only has the needed information.
+										</li>
+									</ol>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -364,46 +390,28 @@
 				</div>
 				<div id="projectBoxes2" class="row">
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card" style="width>:100%;">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+						<a href="#" class="modalBtn" data-modal="project21Name">
+							<div class="card" style="width>:100%;">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/pr2j46R.png" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title text-center display-5 paraText">This Webiste - HTML | CSS</h5>
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
-							</div>
-						</div>
-					</div>
-
-
-				</div>
-				<div id="projectBoxes3" class="row">
-					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card" style="width>:100%;">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+						</a>
+						<div class="modal" id="project21Name">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Audit Macros</h1>
+									<h4>VBA</h4>
+								</div>
+								<div class="modal-body">
+									<p class="paraText">
+										This website was built with HTML and CSS. The layout was aligned with the Bootstrap 4 library. <br />
+										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/profilesite">Github Link</a>
+									</p>
+									<button class="close-modal">Close!</button>
+								</div>
 							</div>
 						</div>
 					</div>
