fixed navbar project click thru

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 							<a class="nav-link" href="#sectionTopInfo">Info</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#sectionProjectSlide">Projects</a>
+							<a class="nav-link" href="#projectNavSpot">Projects</a>
 						</li>
 						<div class="dropdown-divider"></div>
 						<li class="nav-item dropdown">
@@ -206,6 +206,7 @@
 						</div>
 					</div>
 				</div>
+				<span id="projectNavSpot"></span>
 				<div id="projectBoxes1" class="row">
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project11Name">
