added fitness project

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="./css/home.css" />
-		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel|Sigmar+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
 		<script src="./js/fadeSection.js"></script>
@@ -417,10 +417,29 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+						<a href="#" class="modalBtn" data-modal="project22Name">
+							<div class="card">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/F7UmFc6.png" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title text-center display-5 paraText">Fit Homie- ExpressJs</h5>
+								</div>
+							</div>
+						</a>
+						<div class="modal" id="project22Name">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Fit Homie</h1>
+									<h4>ExpressJs | NodeJs</h4>
+								</div>
+								<div class="modal-body">
+									<p class="paraText">
+										This website was built with ExpressJs, NodeJs, Bootstrap4 and various Node Libraries. <br />
+										<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site</a><br />
+										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a>
+									</p>
+									<button class="close-modal">Close!</button>
+								</div>
 							</div>
 						</div>
 					</div>
