changed project name / image myFitnessHomie

--- a/home.html
+++ b/home.html
@@ -419,9 +419,9 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project22Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/F7UmFc6.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/czGUYVR.png" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Fit Homie- ExpressJs</h5>
+									<h5 class="card-title text-center display-5 paraText">myFitnessHomie- ExpressJs</h5>
 								</div>
 							</div>
 						</a>
