added Melo Homage Project

--- a/home.html
+++ b/home.html
@@ -429,7 +429,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Fit Homie</h1>
+									<h1>myFitnessHomie</h1>
 									<h4>ExpressJs | NodeJs</h4>
 								</div>
 								<div class="modal-body">
@@ -444,10 +444,29 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+						<a href="#" class="modalBtn" data-modal="project23Name">
+							<div class="card">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/8VrKchQ.png" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title text-center display-5 paraText">Melo Homage- ExpressJs</h5>
+								</div>
+							</div>
+						</a>
+						<div class="modal" id="project23Name">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Melo Homage</h1>
+									<h4>ExpressJs | NodeJs</h4>
+								</div>
+								<div class="modal-body">
+									<p class="paraText">
+										This website was built with ExpressJs, NodeJs, Semantic and various Node Libraries. <br />
+										<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site</a><br />
+										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a>
+									</p>
+									<button class="close-modal">Close!</button>
+								</div>
 							</div>
 						</div>
 					</div>
